<resources>
    <string name="app_name">Lab 7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="go_to_login">Go to Login</string>
    <string name="create_user_title">Create User</string>
    <string name="go_to_home">Go to home</string>
    <string name="login_title">Login</string>
    <string name="go_to_create">Go to create</string>
    <string name="Laboratorio_7" />
    <string name="nuevo_usuario_crea_tu_cuenta_aqu">¿Nuevo usuario?¡Crea tu cuenta aquí!</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="inicio">inicio</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="regresar">Regresar</string>
    <string name="ingrese_tu_correo">Ingrese tu correo</string>
    <string name="buenos_d_as">Buenos Días!</string>
    <string name="buenos_dias">¡buenos_dias!</string>
    <string name="actualizar_perfil">Actualizar Perfil</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="actualizar">Actualizar</string>
    <string name="Ingrese_tu_correo">Ingrese tu correo</string>
    <string name="laboratorio_7">Laboratorio 7</string>
    <string name="jcdurini_uvg_edu_gt">jcdurini@uvg.edu.gt</string>
</resources>