<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">


    <TextView
        android:id="@+id/text_fragmentHome_title"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/laboratorio_7"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInput_homeFragment_insertadress"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/button_homeFragment_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/nuevo_usuario_crea_tu_cuenta_aqu"
        android:textColor="@color/teal_700"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_homeFragment_newsession"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_homeFragment_insertadress" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_homeFragment_insertadress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@+id/button_homeFragment_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_fragmentHome_title"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_fragmentHome_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/Ingrese_tu_correo" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_homeFragment_newsession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/orange"
        android:text="@string/iniciar_sesi_n"
        android:textSize="@dimen/buttontext_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_homeFragment_login" />

</androidx.constraintlayout.widget.ConstraintLayout>